add edit and delete capabilities for items
